# qr-generator

./: Dockerfile  requirements.txt  setup.cfg
qr_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
qrcode-generator/: generator.py
